firt push after merge

--- a/public/css_box_model.html
+++ b/public/css_box_model.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Box Model Exercise</title>
-	<link rel="stylesheet" type="text/css" href="/css/box_model.css">
+	<link rel="stylesheet" type="text/css" href="css/box_model.css">
 </head>
 <body>
 	<h1><a href="http://en.wikipedia.org/wiki/Visible_spectrum" target="_blank">Visible Spectrum Wavelengths</a></h1>
