--- a/public/css_positioning.html
+++ b/public/css_positioning.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Positioning Exercise</title>
-	<link rel="stylesheet" type="text/css" href="/css/positioning.css">
+	<link rel="stylesheet" type="text/css" href="css/positioning.css">
 </head>
 <body>
 	<img id="ribbon" src="/img/codeup-ribbon.png" alt="Codeup Ribbon">
