--- a/public/resume_lang.html
+++ b/public/resume_lang.html
@@ -4,6 +4,7 @@
 	<title>Education</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" type="text/css" href="css/resume_lang.css">
 </head>
 <body>
@@ -56,7 +57,7 @@
 	       		<div id="profile_box">
 		       		<div class="row">
 		       			<div class="col-xs-12">
-		       	 			<img id="headshot" src="img/headshot.jpg">
+		       	 			<img id="headshot" src="img/headshot.jpg" alt="headshot">
 	       	 			</div>
 	   	 			</div>
 	   	 			<div class="row">
