--- a/public/css_intro.html
+++ b/public/css_intro.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>CSS Styling</title>
-	<link rel="stylesheet" href="/css/site.css">
+	<link rel="stylesheet" href="css/site.css">
 </head>
 <body>
 	<h1 class="fancy-header">I've got bad style!</h1>
