--- a/public/resume.html
+++ b/public/resume.html
@@ -4,6 +4,7 @@
 	<title>My Resume</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/resume.css">
 </head>
 <body>
@@ -48,37 +49,40 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div id="body_links" class="row pull-right">
+      <div class="row pull-right">
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <a href="resume_edu.html"><i id="cap" class="fa fa-graduation-cap fa-5x img-circle"></i></a>
-          <h2>Education</h2>
+          <a href="resume_edu.html" class="bodyLinks"><h2>Education</h2></a>
           <p>See where I earned my degrees and received my training!</p>
-          <p><a class="btn btn-default" href="/resume_edu.html" role="button">View details »</a></p>
+          <!-- <p><a class="btn btn-default" href="/resume_edu.html" role="button">View details »</a></p> -->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <a href="resume_lang.html"><i id ="code" class="fa fa-code fa-5x img-circle"></i></a>
-          <h2>Programming Languages</h2>
+          <a href="resume_lang.html" class="bodyLinks"><h2>Programming Languages</h2></a>
           <p>If I don't know the exact language you need, not to worry. I'll learn it!</p>
-          <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">View details »</a></p> -->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <a href="resume_work.html"><i id="clock" class="fa fa-clock-o fa-5x img-circle"></i></a>
-          <h2>Work History</h2>
+          <a href="resume_work.html" class="bodyLinks"><h2>Work History</h2></a>
           <p>This might surprise you...</p>
-          <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">View details »</a></p> -->
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
-      <!-- FOOTER -->
+
+ <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2015 Jamie Haskell<!--  ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
       </footer>
+     
 
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
