--- a/public/resume.html
+++ b/public/resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Resume</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/resume.css">
 </head>
