--- a/public/resume.html
+++ b/public/resume.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
 <head>
 	<title>My Resume</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/resume.css">
 </head>
@@ -73,12 +74,17 @@
       </div><!-- /.row -->
 
       <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© 2015 Jamie Haskell<!--  ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
-      </footer>
-
     </div>
+        <footer class="footer">
+          <div class="container">
+            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p>© 2015 Jamie Haskell<!--  ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
+          </div>
+
+
+
+        </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
