final for George to see

--- a/public/resume.html
+++ b/public/resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Resume</title>
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/resume.css">
@@ -24,8 +24,8 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/bio.html">Home</a></li>
-                <li><a href="/portfolio.html">Portfolio</a></li>
+                <li class="active"><a href="bio.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -49,12 +49,12 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row pull-right">
+      <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <a href="resume_edu.html"><i id="cap" class="fa fa-graduation-cap fa-5x img-circle"></i></a>
-          <a href="resume_edu.html" class="bodyLinks"><h2>Education</h2></a>
-          <p>See where I earned my degrees and received my training!</p>
+          <a href="resume_edu.html" class="bodyLinks"><h2 class="extraMargin">Education</h2></a>
+          <p class="extraMargin">See where I earned my degrees and received my training!</p>
           <!-- <p><a class="btn btn-default" href="/resume_edu.html" role="button">View details »</a></p> -->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
@@ -67,21 +67,22 @@
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <a href="resume_work.html"><i id="clock" class="fa fa-clock-o fa-5x img-circle"></i></a>
-          <a href="resume_work.html" class="bodyLinks"><h2>Work History</h2></a>
-          <p>This might surprise you...</p>
+          <a href="resume_work.html" class="bodyLinks"><h2 class="extraMargin">Work History</h2></a>
+          <p class="extraMargin">This might surprise you...</p>
           <!-- <p><a class="btn btn-default" href="#" role="button">View details »</a></p> -->
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
-
-
- <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© 2015 Jamie Haskell<!--  ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
-      </footer>
      
-
     </div>
+
+<!-- FOOTER -->
+      <footer>
+        <div class="container">
+          <p class="pull-right"><a href="#">Back to top</a></p>
+          <p>© 2015 Jamie Haskell<!--  ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
+        </div>
+      </footer>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
