--- a/public/resume_edu.html
+++ b/public/resume_edu.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Education</title>
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" type="text/css" href="css/resume_edu.css">
@@ -137,12 +137,16 @@
         	</div> <!--Closes Second Column -->   
 	   	</div> <!-- Closes Global Row --> 
 
-    <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© 2015 Jamie Haskell<!--  ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
+	</div> <!-- Closes Global Container -->
+
+<!-- FOOTER -->
+      <footer>
+        <div class="container">
+          <p class="pull-right"><a href="#">Back to top</a></p>
+          <p>© 2015 Jamie Haskell<!--  ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
+        </div>
       </footer>
 
-	</div> <!-- Closes Global Container -->
 
 <!-- Links to bootstrap -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
