--- a/public/resume_edu.html
+++ b/public/resume_edu.html
@@ -53,33 +53,33 @@
 <!-- Global Row -->
 		<div class="row">
 <!-- First Column -->
-	       	<div class="col-xs-4">
+	       	<div id="profile_box_container" class="col-md-4 hidden-xs hidden-sm">
 	       		<div id="profile_box">
-		       		<div class="row">
-		       			<div class="col-xs-12">
-		       	 			<img id="headshot" src="img/headshot.jpg" alt="headshot">
-	       	 			</div>
-	   	 			</div>
-	   	 			<div class="row">
-	   	 				<div class="col-xs-12">
-		       	 			<h2>Jamie Haskell</h2>
-	       	 			</div>
-		       	 	</div>
-		       	 	<div class="row">
-	   	 				<div class="col-xs-12">
-		       	 			<button><a href="resume_lang.html"><i id ="code" class="fa fa-code icon"></i> Programming Languages</a></button>
-	       	 			</div>
-		       	 	</div>
-		       	 	<div class="row">
-	   	 				<div class="col-xs-12">
-		       	 			<button><a href="resume_work.html"><i id="clock" class="fa fa-clock-o icon"></i> Work History    </a></button>
-	       	 			</div>
-		       	 	</div>
+  		       		<div class="row">
+  		       			<div class="col-xs-12">
+  		       	 			<img id="headshot" src="img/headshot.jpg" alt="headshot">
+  	       	 			</div>
+  	   	 			  </div>
+    	   	 			<div class="row">
+    	   	 				<div class="col-xs-12">
+    		       	 			<h2>Jamie Haskell</h2>
+           	 			</div>
+    	       	 	</div>
+    	       	 	<div class="row">
+    	   	 				  <div class="col-xs-12">
+    		       	 			<button><a href="resume_lang.html"><i id ="code" class="fa fa-code icon"></i> Programming Languages</a></button>
+    	       	 			</div>
+    	       	 	</div>
+    	       	 	<div class="row">
+    	   	 				  <div class="col-xs-12">
+    		       	 			<button><a href="resume_work.html"><i id="clock" class="fa fa-clock-o icon"></i> Work History    </a></button>
+    	       	 			</div>
+           	 	  </div>
 	       	 	</div>
 	       	</div>
 	        
 <!-- Second Column -->
-	        <div class="col-xs-8">
+	        <div class="col-md-8 col-md-offset-4">
 	        	<div class ="row">
 	        		<div id="h1_row" class="col-xs-9">
 	        			<h1 id="main_h1">Education</h1>
