--- a/public/resume_lang.html
+++ b/public/resume_lang.html
@@ -53,7 +53,7 @@
 <!-- Global Row -->
 		<div class="row">
 <!-- First Column -->
-	       	<div class="col-xs-4">
+	       	<div id="profile_box_container" class="col-md-4 hidden-xs hidden-sm">
 	       		<div id="profile_box">
 		       		<div class="row">
 		       			<div class="col-xs-12">
@@ -79,7 +79,7 @@
 	       	</div>
 	        
 <!-- Second Column -->
-	        <div class="col-xs-8">
+	        <div class="col-md-8 col-md-offset-4">
 	        	<div class ="row">
 	        		<div id="h1_row" class="col-xs-8">
 	        			<h1 id="main_h1">Languages & Frameworks</h1>
