--- a/public/resume_lang.html
+++ b/public/resume_lang.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" type="text/css" href="css/resume_lang.css">
+  <link rel="stylesheet" type="text/css" href="css/resume_lang.css">
 </head>
 <body>
 
@@ -137,7 +137,7 @@
 
 <!-- Links to bootstrap -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
