--- a/public/DOM_blog_js.html
+++ b/public/DOM_blog_js.html
@@ -23,7 +23,7 @@
 	
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/DOM_blog.js"></script>
 
 </body>
