--- a/public/google_maps_api.html
+++ b/public/google_maps_api.html
@@ -2,22 +2,51 @@
 <html>
 <head>
   <style type="text/css">
-  #map-canvas {
-    width: 350px;
-    height: 350px;
+  #map-canvas, #map-canvas2 {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 10px;
   }
   </style>
 </head>
 <body>
   <!-- div to hold map -->
   <div id="map-canvas"></div>
+  <div id="map-canvas2"></div>
 
   <!-- Load the Google Maps API [DON'T FORGET TO USE A KEY] -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlTGf6sv-3t8Fvbx3hT-C6qssXr0yg9bE"></script>
 
   <!-- Script to show address on map -->
   <script type="text/javascript">
+	   
+	//-------------------------------Using Latitude and Longitude Locations--------------------------------
+	var mapOptions2 = {
+      // Set the zoom level
+      zoom: 18,
+      // This sets the center of the map at our location
+      center: { lat: 28.456998, lng: -81.471870 },
+      mapTypeId: google.maps.MapTypeId.HYBRID
+    };
+    // Render the map
+    var map2 = new google.maps.Map(document.getElementById("map-canvas2"), mapOptions2); 
+    //Create a rotation button that allows the map to be tilted 45 degrees at a time.
+    map2.setTilt(45);
+    var marker2 = new google.maps.Marker({
+				    position: mapOptions2.center,
+				    map: map2,
+				    draggable:true,
+    				animation: google.maps.Animation.DROP
+			    });
+			    // Create a new infoWindow object with content
+				var infowindow = new google.maps.InfoWindow({
+				    content: 'Nile Etheopian Restaurant'
+				});
+
+				// Open the window using our map and marker
+				infowindow.open(map2,marker2);
 	   	
+  	// ------------------------------Using a specific Address-------------------------------------
 	   	var address = '112 E Pecan St, San Antonio, TX, 78205';
 
 		// Init geocoder object
