mixing php and html

--- a/public/DOM_blog_js.html
+++ b/public/DOM_blog_js.html
@@ -5,16 +5,6 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
   	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/DOM_blog.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
-    <script>!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>')</script>
-    <script src="jquery.raptorize.1.0.js"></script>
-    <script type="text/javascript">
-       $(window).load(function() {
-          $('.button').raptorize({
-            'enterOn' : 'click', //timer, konami-code, click
-            'delayTime' : 2000 //time before raptor attacks on timer mode
-           });
-        });
     </script>
 </head>
 <body>
@@ -24,7 +14,7 @@
 			<input id="new-title" type='text' name='title' placeholder="Title"><br>
 			<input id="new-author" type='text' name='author' placeholder="Your Name"><br>
 			<input id="new-body" type='text' name='body' placeholder="Body">
-			<p><button id="submit-button" type="submit" class="btn btn-primary button">Submit</button></p>
+			<p><button id="submit-button" type="submit" class="btn btn-primary">Submit</button></p>
 		</form>
 	</div>
 
