--- a/public/google_maps_api.html
+++ b/public/google_maps_api.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style type="text/css">
+  <style>
   #map-canvas, #map-canvas2 {
     width: 100%;
     height: 300px;
